vlib/v/parser/tests/fn_use_builtin_err.vv
fn print(strings ...string) {
	for s in strings {
		println(s)
	}
}

fn main() {
	print('text')
}
